// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`html_with_entry_and_template_config 1`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

    <meta charset="UTF-8">
    <title></title>
    <script src="/test/demo/demo1/demo1.ts" type="module"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`html_with_entry_and_template_config 2`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`html_with_entry_config 1`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

    <meta charset="UTF-8">
    <title></title>
    <script src="/test/demo/demo1/demo1.ts" type="module"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`html_with_inject_code_all_page 1`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>

<script>window.dd = "dd";</script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`html_with_inject_code_all_page 2`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>

<script>window.dd = "dd";</script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`html_with_inject_code_demo1 1`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>

<script>window.dd = "dd";</script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`html_with_template_config1 1`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`html_with_template_config2 1`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`index 1`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`index 2`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`index with context 1 1`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/demo/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/demo/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`index with context 1 2`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/demo/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/demo/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`index_with_sub_folder1 1`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`index_with_sub_folder1 2`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`index_with_sub_folder2 1`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;

exports[`index_with_sub_folder2 2`] = `
"<!DOCTYPE html><html lang="en"><head>
  <script type="module" src="/@vite/client"></script>

  <meta charset="UTF-8">
  <title>Demo</title>
    <script type="module" src="/test/demo/demo1/demo1.ts"></script>
</head>
<body>
<div id="app"></div>


</body></html>"
`;
